--- a/Alumno/.classpath
+++ b/Alumno/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="D:/Escritorio/Métodos Pakito/AreaFigurasConMenú.jar"/>
+	<classpathentry kind="lib" path="D:/Escritorio/Métodos Pakito/ComprobarLetraDNI.jar"/>
+	<classpathentry kind="lib" path="D:/Escritorio/Métodos Pakito/Menu.jar"/>
+	<classpathentry kind="lib" path="D:/Escritorio/Métodos Pakito/ValidadorDNI.jar"/>
+	<classpathentry kind="lib" path="H:/Metodos/MetodoMenu.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
